welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: expected class or object definition
def fini(){
^SnakeBuggle:17: error: expected class or object definition
def serpute(){
^SnakeBuggle:31: error: Unmatched closing brace '}' ignored here
}
^